# memproc

./: .gitignore  Makefile  README.md  pyproject.toml
src/memproc/: core.py  main.py  utils.py
src/memproc/lib/: process.py  process_pool.py  utils.py
